src_old/objects/JobAttempt__c.object
<CustomObject>
    <description>Job Attempt is an attempt of a Job performed at a location. Job Attempt is related to an Exception.</description>
    <fields>
        <fullName>AllowTeamManagement__c</fullName>
        <formula>Job__r.AllowTeamManagement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Team Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedContactFirstName__c</fullName>
        <formula>AssignedContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactHomeLatitude__c</fullName>
        <formula>AssignedContact__r.HomeGeoLocation__Latitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact Home Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedContactHomeLongitude__c</fullName>
        <formula>AssignedContact__r.HomeGeoLocation__Longitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact Home Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedContactId__c</fullName>
        <label>Assigned Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactLastName__c</fullName>
        <formula>AssignedContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactPhone__c</fullName>
        <formula>AssignedContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactTitle__c</fullName>
        <formula>AssignedContact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Attempts</relationshipLabel>
        <relationshipName>Job_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedEmployeeId__c</fullName>
        <formula>AssignedContact__r.EmployeeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttemptReason__c</fullName>
        <label>Attempt Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttemptResponsibleExecutionCompanyLogo__c</fullName>
        <label>AttemptResponsibleExecutionCompanyLogo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AttemptResponsibleExecutionCompany__c</fullName>
        <label>Attempt Responsible Execution Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttemptScheduleDate__c</fullName>
        <label>Attempt Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AttemptScheduledDate__c</fullName>
        <label>Date Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AttemptSequencePadded__c</fullName>
        <formula>LPAD(TEXT(AttemptSequence__c), 3, &apos;0&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attempt Sequence Padded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttemptSequence__c</fullName>
        <label>Attempt Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttemptStatus__c</fullName>
        <label>Attempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttemptType__c</fullName>
        <label>Attempt Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ORIGINAL</fullName>
                </value>
                <value>
                    <fullName>RE-ATTEMPT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttemptedDate__c</fullName>
        <description>Date that the Rep actually attempted to execute the work.</description>
        <inlineHelpText>Date that the Rep actually attempted to execute the work.</inlineHelpText>
        <label>Attempted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateAssigned__c</fullName>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateAttempted__c</fullName>
        <label>Date Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateCanceled__c</fullName>
        <label>Date Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateClosed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateOriginallyReported__c</fullName>
        <label>Date Originally Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateReported__c</fullName>
        <label>Date Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateStarted__c</fullName>
        <label>Date Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECAttemptId__c</fullName>
        <label>EC Attempt ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECAttemptStatus__c</fullName>
        <label>EC Attempt Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECProjectId__c</fullName>
        <label>EC Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionCode__c</fullName>
        <label>Exception Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionCommentsLong__c</fullName>
        <label>Exception Comments Long</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionComments__c</fullName>
        <label>Exception Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionName__c</fullName>
        <formula>Exception__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exception Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionReason__c</fullName>
        <label>Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionReportedGeoLocation__c</fullName>
        <description>Exception reported Geo location</description>
        <inlineHelpText>Exception reported Geo location</inlineHelpText>
        <label>ExceptionReportedGeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exception</label>
        <referenceTo>Exception__c</referenceTo>
        <relationshipLabel>Job Attempts</relationshipLabel>
        <relationshipName>Job_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpectedNumberofWorkers__c</fullName>
        <label>Expected Number of Workers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FailedQC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShift__c</fullName>
        <formula>Job__r.IsShift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStartedOnTime__c</fullName>
        <formula>IF($Setup.OneHubCustomSetting__c.StoreStartTimeGrace__c &gt;= StartTimeDelay__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Started On Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTask__c</fullName>
        <formula>Job__r.IsTask__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Attempts</relationshipLabel>
        <relationshipName>Job_Attempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>This custom field will be populated with standard Last Modified Date value. Created this field for Indexing purposes</description>
        <label>Last Modified Date - OneHub</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationTimeReported__c</fullName>
        <label>Location Time Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagerComment__c</fullName>
        <label>Manager Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerName__c</fullName>
        <label>Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerSignatureAttachmentId__c</fullName>
        <label>Manager Signature Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerSignatureContentType__c</fullName>
        <label>Manager Signature Content Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfReschedules__c</fullName>
        <label>Number of Reschedules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofImages__c</fullName>
        <label>Number of Images</label>
        <summaryForeignKey>JobImage__c.JobAttempt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PercentComplete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryJobAttemptWorker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Job Attempt Worker</label>
        <referenceTo>JobAttemptWorker__c</referenceTo>
        <relationshipLabel>Job Attempts</relationshipLabel>
        <relationshipName>Job_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimarySupervisorEmail__c</fullName>
        <formula>PrimaryJobAttemptWorker__r.SupervisorEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrimarySupervisorEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryWorkerEmail__c</fullName>
        <formula>PrimaryJobAttemptWorker__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrimarytWorkerEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location</label>
        <referenceTo>ProjectLocation__c</referenceTo>
        <relationshipLabel>Job Attempts</relationshipLabel>
        <relationshipName>Job_Attempts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QCFailureComments__c</fullName>
        <label>QC Failure Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCFailureReasonCode__c</fullName>
        <label>QC Failure Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEED A CODE</fullName>
                </value>
                <value>
                    <fullName>Inconclusive Reporting</fullName>
                </value>
                <value>
                    <fullName>Job Incomplete</fullName>
                </value>
                <value>
                    <fullName>Incorrect Photo Uploaded</fullName>
                </value>
                <value>
                    <fullName>Store Manager Complaint</fullName>
                </value>
                <value>
                    <fullName>Client Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportedContactFirstName__c</fullName>
        <formula>ReportedContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactHomeLatitude__c</fullName>
        <formula>ReportedContact__r.HomeGeoLocation__Latitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact Home Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportedContactHomeLongitude__c</fullName>
        <formula>ReportedContact__r.HomeGeoLocation__Longitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact Home Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportedContactId__c</fullName>
        <label>Reported Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactLastName__c</fullName>
        <formula>ReportedContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactPhone__c</fullName>
        <formula>ReportedContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactTitle__c</fullName>
        <formula>ReportedContact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported  Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Attempts (Reported Contact)</relationshipLabel>
        <relationshipName>Job_Attempts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportedEmployeeId__c</fullName>
        <formula>ReportedContact__r.EmployeeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledDateTime__c</fullName>
        <label>Scheduled Date Time (UTC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <formula>Job__r.Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTimeDelay__c</fullName>
        <formula>If(ISNULL( DateStarted__c), (NOW() -ScheduledDateTime__c) * 24 * 60,
(DateStarted__c - ScheduledDateTime__c) * 24 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start time Delay(Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamLeadContactId__c</fullName>
        <formula>PrimaryJobAttemptWorker__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Lead Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamLeadUserId__c</fullName>
        <formula>PrimaryJobAttemptWorker__r.UserId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TeamLeadUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeReportedCalculated__c</fullName>
        <formula>IF (OR(ISBLANK(TimeReported__c),ISNULL(TimeReported__c)),TotalInStoreBillableTime__c,TimeReported__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Reported Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeReported__c</fullName>
        <label>Time Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalInStoreBillableTime__c</fullName>
        <label>Total In-Store Billable Time</label>
        <summarizedField>JobAttemptWorker__c.TotalInStoreBillableTime__c</summarizedField>
        <summaryForeignKey>JobAttemptWorker__c.JobAttempt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInStoreNonBillableTime__c</fullName>
        <label>Total In-Store Non Billable Time</label>
        <summarizedField>JobAttemptWorker__c.TotalInStoreNonBillableTime__c</summarizedField>
        <summaryForeignKey>JobAttemptWorker__c.JobAttempt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInStoreTime__c</fullName>
        <label>Total In-Store Time</label>
        <summarizedField>JobAttemptWorker__c.TotalInStoreTime__c</summarizedField>
        <summaryForeignKey>JobAttemptWorker__c.JobAttempt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Job Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{000000000}</displayFormat>
        <label>Job Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Report_Attempt_if_Job_is_Closed</fullName>
        <active>true</active>
        <description>A job attempt can be reported many times until the job is closed.</description>
        <errorConditionFormula>AND(
(ISPICKVAL( Job__r.JobStatus__c , &apos;Closed&apos;)),
(ISPICKVAL( AttemptStatus__c, &apos;Reported&apos;))
)</errorConditionFormula>
        <errorMessage>A job attempt can be reported many times until the job is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_ENW_after_InProgress</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(ExpectedNumberofWorkers__c), 
OR(
AND 
( 
IsShift__c = false,
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;PLANNING&apos;, 
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;BOOKED&apos;, 
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;LAUNCHED&apos; 
)
,
AND 
( 
IsShift__c = true,
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;PLANNING&apos;, 
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;BOOKED&apos;, 
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;LAUNCHED&apos;,
UPPER(TEXT(Job__r.Project__r.Status__c)) != &apos;IN PROGRESS&apos;
)
)
)</errorConditionFormula>
        <errorMessage>Number of Workers cannot be changed after a project is In progress unless it&apos;s a Shift.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_past_schedule_dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(AttemptScheduleDate__c), AttemptScheduleDate__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Cannot schedule an attempt to a date that is in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventScheduleDateUpdateIfNotByEC</fullName>
        <active>true</active>
        <description>To prevent  scheduledate if the user does not belong to an Execution Company</description>
        <errorConditionFormula>AND(Job__r.Project__r.ProjectScheduleOption__r.Code__c != &apos;EC&apos;,ISCHANGED(AttemptScheduledDate__c),CONTAINS($User.Username,&quot;salesforce.integration&quot;))</errorConditionFormula>
        <errorMessage>Schedule Date update is not allowed for this Scheduling option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Updates_to_Inactive_Attempts</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(IsActive__c) == false, ISCHANGED(LastModifiedDate))</errorConditionFormula>
        <errorMessage>Inactive Attempts cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReportedScheduledDateLaterThanNow</fullName>
        <active>true</active>
        <description>A Job with a Scheduling Option of User or System cannot be Reported if the Attempt Schedule Date is in the future.</description>
        <errorConditionFormula>AND(ISPICKVAL(AttemptStatus__c,&apos;Reported&apos;), OR( (Job__r.ProjectScheduleOptionName__c == &apos;USER&apos;), (Job__r.ProjectScheduleOptionName__c == &apos;SYSTEM&apos;))
,AttemptScheduleDate__c &gt; TODAY())</errorConditionFormula>
        <errorMessage>A Job with a Scheduling Option of User or System cannot be Reported if the Attempt Schedule Date is in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reported_DateAttempted_And_time_Required</fullName>
        <active>true</active>
        <description>A Job cannot be reported without the Time Reported and Attempted Date.</description>
        <errorConditionFormula>AND(ISPICKVAL(AttemptStatus__c,&apos;Reported&apos;),
OR((TimeReported__c == null),
(AttemptedDate__c == null)) 
)</errorConditionFormula>
        <errorMessage>A Job cannot be reported without the Time Reported and Attempted Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>attempted_date_not_before_scheduled_date</fullName>
        <active>true</active>
        <description>A Job with a Scheduling Option of User or System cannot have a Date Attempted that occurs before the Attempt Schedule Date where a job attempt is reported.</description>
        <errorConditionFormula>AND(ISPICKVAL(AttemptStatus__c,&apos;Reported&apos;), OR( (Job__r.ProjectScheduleOptionName__c == &apos;USER&apos;), (Job__r.ProjectScheduleOptionName__c == &apos;SYSTEM&apos;))
,AttemptedDate__c &lt; AttemptScheduleDate__c)</errorConditionFormula>
        <errorDisplayField>AssignedContact__c</errorDisplayField>
        <errorMessage>A Job with a Scheduling Option of User or System cannot have a Date Attempted that occurs before the Attempt Schedule Date.</errorMessage>
    </validationRules>
</CustomObject>